--- a/src/scss/scss_basement/abstracts/_mixins.scss
+++ b/src/scss/scss_basement/abstracts/_mixins.scss
@@ -28,8 +28,16 @@
 
 // --- OUTER SHADOWS ---
 
+// @mixin box-shadow-default($color){
+//     box-shadow: 1px 3px 6px $color;
+// }
+
 @mixin box-shadow-default($color){
-    box-shadow: 1px 3px 6px $color;
+    box-shadow: 0px 3px 20px $color;
+}
+
+@mixin box-shadow-alternate{
+    box-shadow: 0 3px 5px rgba($color: #000000, $alpha: 0.2);
 }
 
 // --- GLOWING SHADOWS ---
@@ -146,7 +154,24 @@
 // 'COLORS'
 //
 
-@mixin color-set-1{
+@mixin color-set-primary{
+    background-color: $color-primary;
+    color: $color-on-primary;
+}
+
+@mixin color-set-secondary{
+    background-color: $color-secondary;
+    color: $color-on-secondary;
+}
+
+
+@mixin color-set-akzent{
+    background-color: $color-akzent;
+    color: $color-on-akzent;
+}
+
+
+@mixin color-set-1{  
     background-color: $color-background-first;
     color: $color-font-first;
 }
