--- a/src/scss/scss_basement/core/_font.scss
+++ b/src/scss/scss_basement/core/_font.scss
@@ -14,7 +14,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
-
+// NUNITO
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 
