--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -11,6 +11,7 @@
 
 $color-primary: #D0EFB1;
 $color-primary-light-1: rgba(208, 239, 177, 0.8); 
+$color-primary-light-2: #E8F7D8;
 $color-secondary: #fff;
 $color-secondary-variant: #F6F6F6;
 $color-secondary-variant-2: rgba(246, 246, 246, 0.5);
