--- a/src/scss/scss_basement/pages/common.scss
+++ b/src/scss/scss_basement/pages/common.scss
@@ -14,6 +14,10 @@ a{
     @include font-main();
 }
 
+body{
+    overflow-x: hidden;
+}
+
 //
 // 'HEADER'
 //
@@ -55,6 +59,7 @@ a{
         @media screen and (max-width: 1350px) { 
             // @include testing-border-1();
             width: 100%;
+            height: 100vh;
             position: fixed;
             top: 0;
             left: 0; 
@@ -64,6 +69,11 @@ a{
             padding-top: 10rem;
             overflow-y: scroll;
             gap: 1rem;
+            z-index: 10;
+
+            &::-webkit-scrollbar{
+                display: none;
+            }
         }
 
         & > li{
@@ -73,7 +83,7 @@ a{
             @include flex-row-center();
             // background-color: tomato;
             position: relative;
-
+           
             & > a:hover{
                 font-weight: bold;
                 // color: $color-akzent;
@@ -201,7 +211,8 @@ a{
         @include flex-variable(row, nowrap, space-evenly, stretch);
         @include box-shadow-default(rgba(0, 0, 0, 0.3));
         display: none; 
-        border-top: 1px solid transparent;
+        // border-top: 1px solid transparent;
+        background-color: $color-secondary;
 
         @media screen and(max-width: 1350px) {
             position: relative;
@@ -211,6 +222,7 @@ a{
             margin-top: 1rem;
             box-shadow: none;
             width: 100%;
+            background-color: transparent;
 
             display: none; 
         }
@@ -284,6 +296,7 @@ a{
         top: 5rem;
         left: 0;
         @include box-shadow-default(rgba(0, 0, 0, 0.2));
+        background-color: $color-secondary;
 
         @media screen and(max-width: 1350px) {
             position: relative;
@@ -293,6 +306,7 @@ a{
             margin-top: 1rem;
             box-shadow: none;
             width: 100%;
+            background-color: transparent;
            
               display: none;
         }
@@ -328,12 +342,14 @@ a{
             width: inherit;
             @include box-shadow-default(rgba(0, 0, 0, 0.2));
             display: none;
+            background-color: $color-secondary;
 
             @media screen and (max-width: 1350px) {
                 box-shadow: unset;
                 display: block;
                 position: relative;
                 left: 1rem;
+                background-color: transparent;
             }
         }
     }
@@ -409,6 +425,22 @@ a{
     }
 }
 
+
+
+//
+// 'FOOTER'
+//
+
+.footer{
+    @include testing-border-1();
+    @include flex-variable(row, wrap, flex-start, stretch);
+
+    & section{
+        @include testing-border-2();
+        width: 33%;
+        @include flex-variable(columne, nowrap, flex-start, center);
+    }
+}
 
 
 //
