--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -1,10 +1,328 @@
-@import '../core/resets';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../core/font';
+// @import '../core/resets';
+// @import '../abstracts/variables';
+// @import '../abstracts/mixins';
+// @import '../core/font';
+@import './common.scss';
 
 
 // ---------------------------------------------------
 // ### HOME ###
 // --------------------------------------------------
 
+.startpage{
+
+    // 
+    // INTRO
+    //
+    &_intro{
+        // @include testing-border-1();
+        // min-height: calc(100vh - 5rem);
+
+        &_picture{
+            // @include background-image('../graphics/pics/dr-windblade.jpg');
+            background: url(../graphics/pics/girl.jpg) center center / cover no-repeat;
+            height: calc(55vh);
+            // position: relative;
+
+            // &::before,
+            // &::after{
+            //     position; absolute;
+            // }
+        }
+
+        &_heading-container{
+            // @include testing-border-1();
+            @include flex-column-center();
+            height: calc(45vh - 5rem);
+
+            h2{
+                @include font-handwriting();
+                color: $color-primary;
+                font-size: 4rem;
+                margin-bottom: .2rem;
+            }
+
+            p{
+                @include font-personal();
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+    // 
+    // LEISTUNGEN
+    //
+    &_leistungen{
+        background-color: $color-primary;
+        position: relative;
+
+        // &::before,
+        // &::after{
+        //     content: '';
+        //     width: 80%;
+        //     height: 5rem;
+        //     background-color: $color-primary;
+        //     position: absolute;
+        //     top: -5rem;
+        //     opacity: 0.7;
+        // }
+
+        // &::before{
+        //     left: 0;
+        //     clip-path: polygon(0 0%, 100% 100%, 100% 100%, 0% 100%);
+        // }
+
+        // &::after{
+        //     right: 0;
+        //     clip-path: polygon(0 100%, 100% 0%, 100% 100%, 0% 100%);
+        // }
+
+        // 'HEADER'
+        header{
+            // @include testing-border-1();
+            @include flex-column-center();
+            width: 100%;
+            
+            padding: 2rem;
+            margin-top: 5rem;
+            margin-bottom: 3rem;
+
+            img{
+                width: 8rem;
+            }
+
+            h2{
+                @include font-heading-1();
+                // text-shadow: 1px 1px 3px rgba($color: #000000, $alpha: 0.3);
+                font-size: 1.5rem;
+            }
+        }
+
+        &_card-container{
+            @include flex-variable(row, wrap, space-between, center);
+            // @include testing-border-1();
+            width: 90vw;
+            margin: 0 auto;
+        }
+
+         // 'CARDS'
+         &_card{
+            // @include testing-border-1();
+            @include box-shadow-soft(rgba(0,0,0,0.3));
+            width: 35rem;
+            height: 35rem;
+            margin: 2rem;
+            background-color: $color-primary-light-2;
+            // background-color: #fff;
+            border-radius: 1rem;
+            overflow: hidden;
+            @include flex-variable(column, nowrap, flex-start, center);
+            position: relative;
+
+            &_header{
+                // @include testing-border-2();
+                width: 100%;
+                margin-bottom: 2rem;
+
+                img{
+                    filter:grayscale(2);
+                    width: 100%;
+                    height: 12rem;
+                    object-fit: cover;
+                    // opacity: .02;
+                }
+    
+                h3{
+                    background-color: $color-secondary;
+                    margin: 0;
+                    padding: .5rem;
+                    text-align: center;
+                    @include font-heading-1();
+                    @include box-shadow-default(rgba(0,0,0,0.2));
+                }
+            }
+
+            &_list{
+                // @include testing-border-2();
+                margin-bottom: 2rem;
+                padding: 0;
+
+                li{
+                    margin-bottom: .5rem;
+                    position: relative;
+                    // @include testing-border-3();
+                    // background-color: rgba(255, 255, 255, .2);
+                    // padding: .2rem .5rem;
+
+                    &::before{
+                        // @include testing-border-1();
+                        content: '';
+                        width: 1.2rem;
+                        height: 1.2rem;
+                        background: url(../graphics/icons_n_co/healthcare-and-medical.png) center center / cover no-repeat;
+                        position: absolute;
+                        top: .2rem;
+                        left: -2.5rem;
+                        opacity: .8;
+                    }
+
+                    &:last-of-type{
+                        margin-top: 1.5rem;
+                        
+                        &::before{
+                            display: none;
+                        }
+                    }
+                }
+            }
+
+            &_button{
+                background-color: $color-akzent;
+                width: 15rem;
+                text-align: center;
+                padding: .5rem;
+                @include font-main();
+                @include box-shadow-default(rgba(0, 0, 0, 0.2));
+                position: absolute;
+                bottom: 1.5rem;
+                color: $color-on-akzent;
+                // z-index: 2;
+                transform-style: preserve-3d;
+                // transition: all .1s;
+
+                &::before{
+                    content: '';
+                    width: 120%;
+                    height: 150%;
+                    background-color: #fff;
+                    position: absolute;
+                    top: -25%;
+                    left: -10%;
+                    // z-index: -1;
+                    opacity: .5;
+                    border-radius: 0 1rem;
+                    transform: translateZ(-1px);
+                    border: 1px solid rgba(0, 0, 0, 0.3);
+                    display: none;
+                }
+
+                &:hover{
+                    color: rgba(0, 0, 0, 0.7);
+                    // transform: scale(1.1);
+
+                    &::before{
+                        display: block;
+                    }
+                }
+            }
+
+       
+         }
+
+         // 'BIG CARDS'
+         &_card.big-card{
+            // @include testing-border-2();
+            width: 100%;
+            height: 30rem;
+            @include flex-variable(row, nowrap, space-between, center);
+
+            &:nth-of-type(even){
+                & img{
+                    order: 2;
+                }
+
+                & button{
+                    position: relative;
+                    margin: 1rem;
+                }
+            }
+
+            & img{
+                filter:grayscale(2);
+                width: 35rem;
+                height: 100%;
+                object-fit: cover;
+                flex-grow: 1;
+            }
+
+            & .big-card_card-container{
+                // @include testing-border-3();
+                width: 35rem;
+                height: 100%;
+                @include flex-variable(column, nowrap, center, center);
+                position: relative;
+            }
+
+            & h3{
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 35rem;
+            }
+
+            // & button{
+            //     position: relative;
+            // }
+         }
+
+        &_bottom{
+            // @include testing-border-1();
+            height: 4rem;
+            margin-top: 2rem;
+            position: relative;
+
+            &::before,
+            &::after{
+                content: '';
+                width: 80%;
+                height: .5rem;
+                background-color: $color-secondary;
+                position: absolute;
+                border-radius: 0 1rem 1rem 0;
+            }
+
+            &::before{
+                top: 1rem;
+                left: 0;
+            }
+
+            &::after{
+                bottom: 1rem;
+                right: 0;
+            }
+        }
+
+    }
+
+
+}
+
+
+//
+// 'TOGGLE CLASSES'
+//
+
+.clippy-off{
+    // background-color: #fff;
+
+    &::before,
+    &::after{
+        content: '';
+        width: 80%;
+        height: 2rem;
+        background-color: $color-primary;
+        position: absolute;
+        top: -2rem;
+        opacity: 0.7;
+    }
+
+    &::before{
+        left: 0;
+        clip-path: polygon(0 0%, 100% 100%, 100% 100%, 0% 100%);
+    }
+
+    &::after{
+        right: 0;
+        clip-path: polygon(0 100%, 100% 0%, 100% 100%, 0% 100%);
+    }
+}
