working on startpage animations

--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $color-akzent: #BCE4FB;
 
 $color-on-primary: #000;
 $color-on-secondary: #000;
+$color-on-secondary-light: rgba(0, 0, 0, 0.3);
 $color-on-akzent: rgba(0, 0, 0, 0.5);
 
 
